set MonkeyFace on z-index back, fix Calendar state error, in Addtodo, actions and reducer

--- a/src/components/myStyles.css
+++ b/src/components/myStyles.css
@@ -28,9 +28,13 @@ li {
     list-style-image: url("../images/Banana.png");
 }
 
-.monkeyFace {
+#monkeyFace {
     width: 150px;
     height: 150px;
     position: absolute;
     right: 10%;
+    z-index: -1;
 }
+
+
+/* .react-datepicker__input-container {} */
